--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>页面标题(w3cschool.cn)</title>
+    </head>
+    <body>
+        <h1>我的第一个标题</h1>
+        <p>我的第一个段落。</p>
+    </body>
+</html>
